# grohit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
grohit/: __main__.py  __version__.py  grohit.py
grohit/builder/: arrangment.py  dashboard.py  panels.py  registry.py  utils.py
grohit/cli/: app.py  main.py
grohit/cli/commands/: command.py  dashboards.py  datasources.py  folders.py  registries.py  render.py
grohit/config/: config.py
grohit/grafana/: client.py  uploader.py
grohit/registry/: plugins.py  registry.py
grohit/utils/: loaders.py
tests/: conftest.py  types.py
tests/builder/: test_dashboard_builder.py
tests/fixtures/native_panels/: dashboard.yaml
tests/fixtures/registry/: meta_registry.yaml  registry1.yaml  registry2.yaml
tests/fixtures/simple_dashboard/: dashboard.yaml
tests/registry/: test_registry.py
