[tool.poetry]
name = "grohit"
version = "0.1.0"
description = "Grafana Dashboard Automation Tool"
authors = ["Oleksandr Druzenko <oleksandr.druzenko@fiverr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
