[tool.poetry]
name = "grohit"
version = "0.1.0"
description = "Grafana Dashboard Automation Tool"
authors = ["Oleksandr Druzenko <oleksandr.druzenko@fiverr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cleo = "^2.1.0"
requests = "^2.31.0"
platformdirs = "^3.11.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
rich = "^13.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
grohit = "grohit.cli.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
